Update image source for Metal Gear Solid

--- a/videogames.html
+++ b/videogames.html
@@ -196,7 +196,7 @@
       <!-- 7. NEW: Metal Gear Solid -->
       <article class="card">
         <!-- Replace the src path with the correct image path in your repo -->
-        <img class="cover" alt="Metal Gear Solid cover" src="metal-gear-solid.jpg">
+        <img class="cover" alt="Metal Gear Solid cover" src="vgpic7.jpg">
         <div class="panel">
           <div class="game-title">Metal Gear Solid</div>
           <div class="by">Konami / Hideo Kojima</div>
