--- a/moviesshows.html
+++ b/moviesshows.html
@@ -5,18 +5,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Movies & Shows - Angel Contreras</title>
   <meta name="color-scheme" content="dark" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
   <style>
     :root{
       --bg-0:#0a0a0a;
       --bg-1:#131313;
       --bg-2:#1b1b1b;
-      --card:#222;
       --muted:#bfbfbf;
       --muted-2:#9a9a9a;
       --accent:#E50914;
-      --ring:rgba(255,255,255,.14);
     }
 
     *{margin:0;padding:0;box-sizing:border-box}
@@ -25,286 +22,171 @@
     body{
       font-family:-apple-system,BlinkMacSystemFont,"Segoe UI","Helvetica Neue",Arial,sans-serif;
       color:#fff;
-      background:radial-gradient(1200px 600px at 10% -10%, #202020 0%, transparent 60%),
-                 radial-gradient(900px 500px at 110% -20%, #1b1b1b 0%, transparent 55%),
-                 linear-gradient(135deg, var(--bg-1), var(--bg-0));
+      background:linear-gradient(135deg,var(--bg-1),var(--bg-0));
       min-height:100vh;
       overflow-x:hidden;
     }
 
-    .nf{
-      font-family:"Netflix Sans","Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
-      letter-spacing:.015em; text-transform:uppercase;
-    }
-
-    /* Navigation bar */
     .navbar{
-      position:sticky; top:0; inset-inline:0;
-      width:100%; padding:14px clamp(16px,4vw,48px);
-      display:flex; align-items:center; gap:32px; z-index:1000;
-      background:linear-gradient(180deg,rgba(0,0,0,.78),rgba(0,0,0,.45));
-      backdrop-filter:saturate(120%) blur(4px);
+      position:sticky; top:0; width:100%;
+      padding:14px clamp(16px,4vw,48px);
+      display:flex; align-items:center; gap:32px;
+      background:#000;
       border-bottom:1px solid rgba(255,255,255,.06);
+      z-index:100;
     }
     .brand{
-      background:none;border:0;padding:0;margin:0;cursor:pointer;flex-shrink:0;
-      font-weight:900; color:var(--accent); letter-spacing:-.04em; font-size:clamp(22px,3.2vw,32px);
+      font-family:"Bebas Neue",sans-serif;
+      font-weight:900;
+      font-size:clamp(22px,3vw,32px);
+      color:var(--accent);
       text-decoration:none;
     }
-    .navlinks{display:flex; gap:22px; align-items:center; flex-wrap:wrap; flex:1;}
-    .navlinks a{
-      color:#e5e5e5; text-decoration:none; font-size:14px; font-weight:600;
-    }
-    .navlinks a:hover{ color:#bfbfbf; }
-    .navlinks a[aria-current="page"]{ color:#fff; text-decoration:underline; text-underline-offset:6px; }
+    .navlinks{display:flex;gap:22px;flex-wrap:wrap;flex:1;}
+    .navlinks a{color:#e5e5e5;text-decoration:none;font-size:14px;font-weight:600;}
+    .navlinks a[aria-current="page"]{color:#fff;text-decoration:underline;text-underline-offset:6px;}
 
     .container{max-width:1200px;margin:0 auto;padding:20px}
 
-    /* Header */
-    .header{padding:34px 8px 10px;text-align:center;position:relative}
-
     h1{
       font-family:"Bebas Neue",sans-serif;
-      letter-spacing:.08em;
       font-size:clamp(48px,8vw,92px);
-      line-height:0.95;
-      margin-bottom:6px;
       background:linear-gradient(135deg,var(--accent),#ff6270);
       -webkit-background-clip:text;background-clip:text;-webkit-text-fill-color:transparent;
-      text-shadow:0 0 28px rgba(229,9,20,.28)
+      text-align:center;margin:40px 0 10px;
     }
-    .quote{
-      font-style:italic;color:var(--muted);
-      font-size:clamp(15px,2.2vw,18px);
-    }
-    .emoji{display:inline-block;margin-top:6px;font-size:clamp(22px,3vw,30px)}
+    .quote{text-align:center;font-style:italic;color:var(--muted);margin-bottom:24px;}
+    .emoji{text-align:center;font-size:clamp(22px,3vw,30px);}
 
-    /* Sections */
     .section{margin-top:44px}
     .section-title{
       font-size:clamp(22px,2.4vw,28px);
-      font-weight:800;margin:20px 0 18px;
-      padding-left:12px;border-left:5px solid var(--accent)
+      font-weight:800;
+      margin:20px 0 18px;
+      padding-left:12px;
+      border-left:5px solid var(--accent)
     }
 
-    /* Genre buttons */
-    .genre-buttons{
-      display:flex;flex-wrap:wrap;gap:16px;justify-content:center;margin:20px 0 38px
-    }
-    .genre-btn{
-      padding:14px 22px;border-radius:12px;
-      background:rgba(255,255,255,.06);
-      border:1px solid rgba(255,255,255,.14);
-      color:#fff;font-size:16px;font-weight:700;
-      letter-spacing:.02em;cursor:pointer;transition:.2s ease;
-      box-shadow:0 6px 14px rgba(0,0,0,.35)
-    }
-    .genre-btn:hover{background:rgba(255,255,255,.12)}
-    .genre-btn.active{
-      background:var(--bg-2);
-      border-color:rgba(255,255,255,.24);
-      box-shadow:0 0 0 2px rgba(229,9,20,.25) inset,0 10px 26px rgba(229,9,20,.22)
-    }
-
-    /* Card grid */
     .grid{
-      display:grid;gap:26px;
+      display:grid;
+      gap:26px;
       grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
     }
+
     .card{
-      background:rgba(255,255,255,.05);
+      background:#1c1c1c;
       border:1px solid rgba(255,255,255,.12);
-      border-radius:18px;overflow:hidden;position:relative;
-      transition:transform .25s ease,box-shadow .25s ease,border-color .25s ease,background .25s ease;
+      border-radius:18px;
+      overflow:hidden;
+      transition:transform .25s ease, box-shadow .25s ease;
     }
     .card:hover{
-      transform:translateY(-8px);
-      background:rgba(255,255,255,.07);
-      border-color:rgba(255,255,255,.25);
-      box-shadow:0 18px 40px rgba(0,0,0,.55)
+      transform:translateY(-6px);
+      box-shadow:0 18px 40px rgba(0,0,0,.55);
     }
 
-    /* Covers: default is 2:3 with cover; add .contain per-card to avoid crops for odd-ratio images */
-    .cover{width:100%;aspect-ratio:2/3;object-fit:cover;display:block}
-    .cover.contain{object-fit:contain;background:#000}
-
-    .info{padding:16px 16px 20px;text-align:center}
-    .title{font-weight:800;font-size:18px;margin:2px 0 6px}
-    .by{color:var(--muted-2);font-size:14px;font-weight:600}
-
-    /* (Play overlay removed entirely) */
-
-    /* Responsive tweaks */
-    @media (max-width:768px){
-      .header{padding-top:14px}
-      .grid{gap:18px;grid-template-columns:repeat(auto-fit,minmax(180px,1fr))}
-      .title{font-size:16px}
+    /* Ensure every cover displays fully, never cropped */
+    .cover{
+      display:block;
+      width:100%;
+      height:auto;
+      object-fit:contain;
+      background:#000;
     }
+
+    .info{
+      padding:16px;
+      text-align:center;
+      background:#fff;
+      color:#111;
+    }
+    .title{font-weight:800;font-size:18px;margin-bottom:4px;}
+    .by{color:#555;font-size:14px;font-weight:600;}
   </style>
 </head>
 <body>
-  <!-- Navigation bar -->
   <nav class="navbar">
-    <a class="brand nf" href="index.html#home" aria-label="Go to Home">Angel Contreras</a>
-    <div class="navlinks" role="navigation" aria-label="Primary">
+    <a class="brand" href="index.html#home">Angel Contreras</a>
+    <div class="navlinks">
       <a href="index.html#home">Home</a>
       <a href="index.html#portfolio">Portfolio</a>
       <a href="skills.html">Skills</a>
       <a href="projects.html">Projects</a>
       <a href="moviesshows.html" aria-current="page">Movies & Shows</a>
-      <a id="hireLink" href="contact.html">Hire Me</a>
+      <a href="contact.html">Hire Me</a>
     </div>
   </nav>
 
   <div class="container">
-    <header class="header">
-      <h1>Movies &amp; Shows</h1>
-      <p class="quote">"Television is the first truly democratic culture—the first culture available to everybody and entirely governed by what the people want."</p>
-      <div class="emoji">🎬</div>
-    </header>
+    <h1>Movies &amp; Shows</h1>
+    <p class="quote">"Television is the first truly democratic culture—the first culture available to everybody and entirely governed by what the people want."</p>
+    <div class="emoji">🎬</div>
 
-    <!-- Explore by Genre -->
-    <section class="section">
-      <h2 class="section-title">Explore by Genre</h2>
-      <div class="genre-buttons">
-        <button class="genre-btn active" data-genre="all">All</button>
-        <button class="genre-btn" data-genre="drama">Drama</button>
-        <button class="genre-btn" data-genre="action">Action</button>
-        <button class="genre-btn" data-genre="anime">Anime</button>
-        <button class="genre-btn" data-genre="horror">Horror</button>
-        <button class="genre-btn" data-genre="comedy">Comedy</button>
-        <button class="genre-btn" data-genre="scifi">Sci-Fi</button>
-      </div>
-    </section>
-
-    <!-- Favorite Shows & Movies Grid -->
     <section class="section">
       <h2 class="section-title">Favorite Shows &amp; Movies</h2>
 
-      <div class="grid" id="grid">
-        <!-- Game of Thrones (good 2:3 → keep cover) -->
-        <article class="card" data-genre="drama action">
-          <img class="cover" alt="Game of Thrones" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BN2IzYzBiOTQtNGZmMi00NDI5LTgxMzMtN2EzZjA1NjhlOGMxXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg"/>
+      <div class="grid">
+        <!-- Game of Thrones -->
+        <article class="card">
+          <img class="cover" alt="Game of Thrones"
+            src="https://m.media-amazon.com/images/M/MV5BN2IzYzBiOTQtNGZmMi00NDI5LTgxMzMtN2EzZjA1NjhlOGMxXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">Game of Thrones</div>
             <div class="by">by HBO</div>
           </div>
         </article>
 
-        <!-- Breaking Bad (good 2:3 → keep cover) -->
-        <article class="card" data-genre="drama">
-          <img class="cover" alt="Breaking Bad" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BYmQ4YWMxYjUtNjZmYi00MDQ1LWFjMjMtNjA5ZDdiYjdiODU5XkEyXkFqcGdeQXVyMTMzNDExODE5._V1_FMjpg_UX1000_.jpg"/>
+        <!-- Breaking Bad -->
+        <article class="card">
+          <img class="cover" alt="Breaking Bad"
+            src="https://m.media-amazon.com/images/M/MV5BYmQ4YWMxYjUtNjZmYi00MDQ1LWFjMjMtNjA5ZDdiYjdiODU5XkEyXkFqcGdeQXVyMTMzNDExODE5._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">Breaking Bad</div>
             <div class="by">by AMC</div>
           </div>
         </article>
 
-        <!-- Avatar: The Last Airbender (looks fine as cover) -->
-        <article class="card" data-genre="anime action">
-          <img class="cover" alt="Avatar: The Last Airbender" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BODc5YTBhMTItMjhkNi00ZTIx-LWI0YjAtNTZmOTY0YjRlZGQ0XkEyXkFqcGdeQXVyODUwNjEzMzg@._V1_FMjpg_UX1000_.jpg"/>
-          <div class="info">
-            <div class="title">Avatar: The Last Airbender</div>
-            <div class="by">by Nickelodeon</div>
-          </div>
-        </article>
-
-        <!-- One Punch Man (odd ratio → use contain) -->
-        <article class="card" data-genre="anime action comedy">
-          <img class="cover contain" alt="One Punch Man" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BZjJlNzE5YzEtYzQwYS00NTBjLTk5YzAtYzUwOWQyM2E3OGI2XkEyXkFqcGdeQXVyNTgyNTA4MjM@._V1_FMjpg_UX1000_.jpg"/>
-          <div class="info">
-            <div class="title">One Punch Man</div>
-            <div class="by">by Madhouse</div>
-          </div>
-        </article>
-
-        <!-- IT: Welcome to Derry (odd ratio → use contain) -->
-        <article class="card" data-genre="horror">
-          <img class="cover contain" alt="IT: Welcome to Derry" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BNDg3MmI1ZDYtNGYwOS00MzcyLTk3Y2UtYjk1Yzk5OGRhMTljXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <!-- IT: Welcome to Derry -->
+        <article class="card">
+          <img class="cover" alt="IT: Welcome to Derry"
+            src="https://m.media-amazon.com/images/M/MV5BNDg3MmI1ZDYtNGYwOS00MzcyLTk3Y2UtYjk1Yzk5OGRhMTljXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
             <div class="by">by HBO</div>
           </div>
         </article>
 
-        <!-- Chainsaw Man (odd ratio → use contain) -->
-        <article class="card" data-genre="anime action horror">
-          <img class="cover contain" alt="Chainsaw Man" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BZjEwZTEwZWQtYjk4Mi00YTE0LTk0MDktMzgzZWIzMWM0NDJmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg"/>
+        <!-- Chainsaw Man -->
+        <article class="card">
+          <img class="cover" alt="Chainsaw Man"
+            src="https://m.media-amazon.com/images/M/MV5BZjEwZTEwZWQtYjk4Mi00YTE0LTk0MDktMzgzZWIzMWM0NDJmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">Chainsaw Man</div>
             <div class="by">by MAPPA</div>
           </div>
         </article>
 
-        <!-- Bugonia (odd ratio → use contain) -->
-        <article class="card" data-genre="drama scifi comedy">
-          <img class="cover contain" alt="Bugonia" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BMTU2MTMzOTkxNF5BMl5BanBnXkFtZTcwNjU2NjU0OQ@@._V1_FMjpg_UX1000_.jpg"/>
+        <!-- Bugonia -->
+        <article class="card">
+          <img class="cover" alt="Bugonia"
+            src="https://m.media-amazon.com/images/M/MV5BMTU2MTMzOTkxNF5BMl5BanBnXkFtZTcwNjU2NjU0OQ@@._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">Bugonia</div>
             <div class="by">by Focus Features</div>
           </div>
         </article>
 
-        <!-- Eight Legged Freaks (odd ratio → use contain) -->
-        <article class="card" data-genre="horror comedy action">
-          <img class="cover contain" alt="Eight Legged Freaks" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BZTg1ZTU2OWEtMTY4Ny00ZGQzLWIzNmMtYWRjYTNmNzIxMTllXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg"/>
+        <!-- Eight Legged Freaks -->
+        <article class="card">
+          <img class="cover" alt="Eight Legged Freaks"
+            src="https://m.media-amazon.com/images/M/MV5BZTg1ZTU2OWEtMTY4Ny00ZGQzLWIzNmMtYWRjYTNmNzIxMTllXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg">
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
             <div class="by">by Warner Bros.</div>
           </div>
         </article>
-
-        <!-- A Nightmare on Elm Street (kept as cover if it fits; switch to contain if needed) -->
-        <article class="card" data-genre="horror">
-          <img class="cover" alt="A Nightmare on Elm Street" loading="lazy"
-               src="https://m.media-amazon.com/images/M/MV5BNzFjZmM1ODgtMDBkMS00ZmExLWE4Y2ItM2NkNjA3YTI4N2Y2XkEyXkFqcGdeQXVyNTAyODkwOQ@@._V1_FMjpg_UX1000_.jpg"/>
-          <div class="info">
-            <div class="title">A Nightmare on Elm Street</div>
-            <div class="by">by New Line Cinema</div>
-          </div>
-        </article>
       </div>
     </section>
   </div>
-
-  <script>
-    // Genre filtering
-    const buttons = [...document.querySelectorAll('.genre-btn')];
-    const cards   = [...document.querySelectorAll('.card')];
-
-    function setActive(btn){
-      buttons.forEach(b=>b.classList.remove('active'));
-      btn.classList.add('active');
-    }
-
-    buttons.forEach(btn=>{
-      btn.addEventListener('click', ()=>{
-        setActive(btn);
-        const g = btn.dataset.genre;
-        cards.forEach(card=>{
-          const match = g==="all" || card.dataset.genre.split(" ").includes(g);
-          card.style.display = match ? 'block' : 'none';
-          card.style.opacity = match ? '1' : '0';
-          card.style.transform = match ? 'translateY(0)' : 'translateY(6px)';
-        });
-      });
-    });
-
-    // soft entrance
-    cards.forEach((c,i)=>{
-      c.style.opacity='0'; c.style.transform='translateY(8px)';
-      setTimeout(()=>{ c.style.transition='opacity .35s ease, transform .35s ease';
-        c.style.opacity='1'; c.style.transform='translateY(0)';
-      }, 60 + i*35);
-    });
-  </script>
 </body>
 </html>
