Update image source for Eight Legged Freaks

--- a/moviesshows.html
+++ b/moviesshows.html
@@ -179,7 +179,7 @@
         <!-- Eight Legged Freaks -->
         <article class="card">
           <img class="cover" alt="Eight Legged Freaks"
-            src="https://m.media-amazon.com/images/M/MV5BZTg1ZTU2OWEtMTY4Ny00ZGQzLWIzNmMtYWRjYTNmNzIxMTllXkEyXkFqcGdeQXVyMTQxNzMzNDI@._V1_FMjpg_UX1000_.jpg">
+            src="moshow9.jpg">
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
             <div class="by">by Warner Bros.</div>
