--- a/moviesshows.html
+++ b/moviesshows.html
@@ -149,7 +149,7 @@
         <!-- IT: Welcome to Derry -->
         <article class="card">
           <img class="cover" alt="IT: Welcome to Derry"
-            src="https://m.media-amazon.com/images/M/MV5BNDg3MmI1ZDYtNGYwOS00MzcyLTk3Y2UtYjk1Yzk5OGRhMTljXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
+            src="moshow5.jpg">
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
             <div class="by">by HBO</div>
@@ -159,7 +159,7 @@
         <!-- Chainsaw Man -->
         <article class="card">
           <img class="cover" alt="Chainsaw Man"
-            src="https://m.media-amazon.com/images/M/MV5BZjEwZTEwZWQtYjk4Mi00YTE0LTk0MDktMzgzZWIzMWM0NDJmXkEyXkFqcGc@._V1_FMjpg_UX1000_.jpg">
+            src="moshow6.jpg">
           <div class="info">
             <div class="title">Chainsaw Man</div>
             <div class="by">by MAPPA</div>
@@ -169,7 +169,7 @@
         <!-- Bugonia -->
         <article class="card">
           <img class="cover" alt="Bugonia"
-            src="https://m.media-amazon.com/images/M/MV5BMTU2MTMzOTkxNF5BMl5BanBnXkFtZTcwNjU2NjU0OQ@@._V1_FMjpg_UX1000_.jpg">
+            src="moshow7.jpg">
           <div class="info">
             <div class="title">Bugonia</div>
             <div class="by">by Focus Features</div>
