--- a/moviesshows.html
+++ b/moviesshows.html
@@ -14,6 +14,7 @@
       --muted:#bfbfbf;
       --muted-2:#9a9a9a;
       --accent:#E50914;
+      --card:#1c1c1c;
     }
 
     *{margin:0;padding:0;box-sizing:border-box}
@@ -27,6 +28,7 @@
       overflow-x:hidden;
     }
 
+    /* Nav */
     .navbar{
       position:sticky; top:0; width:100%;
       padding:14px clamp(16px,4vw,48px);
@@ -67,31 +69,46 @@
       border-left:5px solid var(--accent)
     }
 
+    /* Grid with stable gaps regardless of image presence */
     .grid{
       display:grid;
       gap:26px;
       grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
     }
 
+    /* Card keeps layout stable even if the image is missing */
     .card{
-      background:#1c1c1c;
+      background:var(--card);
       border:1px solid rgba(255,255,255,.12);
       border-radius:18px;
       overflow:hidden;
       transition:transform .25s ease, box-shadow .25s ease;
+      display:flex;
+      flex-direction:column;
     }
     .card:hover{
       transform:translateY(-6px);
       box-shadow:0 18px 40px rgba(0,0,0,.55);
     }
 
-    /* Ensure every cover displays fully, never cropped */
-    .cover{
-      display:block;
+    /* --- STATIC COVER FRAME ---
+       Reserves a consistent 2:3 area for every tile so margins/gaps never shift,
+       even if the <img> fails to load or is removed. */
+    .cover-frame{
       width:100%;
-      height:auto;
-      object-fit:contain;
-      background:#000;
+      aspect-ratio:2/3;
+      background:#000;      /* letterbox for odd ratios + fallback if no image */
+      position:relative;
+      overflow:hidden;
+      flex:0 0 auto;
+    }
+    .cover{
+      position:absolute;
+      inset:0;
+      width:100%;
+      height:100%;
+      object-fit:contain;   /* never crop; keep full art visible */
+      display:block;
     }
 
     .info{
@@ -102,6 +119,11 @@
     }
     .title{font-weight:800;font-size:18px;margin-bottom:4px;}
     .by{color:#555;font-size:14px;font-weight:600;}
+
+    @media (max-width:768px){
+      .grid{gap:18px;grid-template-columns:repeat(auto-fit,minmax(180px,1fr))}
+      .title{font-size:16px}
+    }
   </style>
 </head>
 <body>
@@ -126,60 +148,72 @@
       <h2 class="section-title">Favorite Shows &amp; Movies</h2>
 
       <div class="grid">
-        <!-- Game of Thrones -->
+        <!-- Game of Thrones (unchanged source) -->
         <article class="card">
-          <img class="cover" alt="Game of Thrones"
-            src="https://m.media-amazon.com/images/M/MV5BN2IzYzBiOTQtNGZmMi00NDI5LTgxMzMtN2EzZjA1NjhlOGMxXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="Game of Thrones"
+                 src="https://m.media-amazon.com/images/M/MV5BN2IzYzBiOTQtNGZmMi00NDI5LTgxMzMtN2EzZjA1NjhlOGMxXkEyXkFqcGdeQXVyNjAwNDUxODI@._V1_FMjpg_UX1000_.jpg">
+          </figure>
           <div class="info">
             <div class="title">Game of Thrones</div>
             <div class="by">by HBO</div>
           </div>
         </article>
 
-        <!-- Breaking Bad -->
+        <!-- Breaking Bad (unchanged source) -->
         <article class="card">
-          <img class="cover" alt="Breaking Bad"
-            src="https://m.media-amazon.com/images/M/MV5BYmQ4YWMxYjUtNjZmYi00MDQ1LWFjMjMtNjA5ZDdiYjdiODU5XkEyXkFqcGdeQXVyMTMzNDExODE5._V1_FMjpg_UX1000_.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="Breaking Bad"
+                 src="https://m.media-amazon.com/images/M/MV5BYmQ4YWMxYjUtNjZmYi00MDQ1LWFjMjMtNjA5ZDdiYjdiODU5XkEyXkFqcGdeQXVyMTMzNDExODE5._V1_FMjpg_UX1000_.jpg">
+          </figure>
           <div class="info">
             <div class="title">Breaking Bad</div>
             <div class="by">by AMC</div>
           </div>
         </article>
 
-        <!-- IT: Welcome to Derry -->
+        <!-- IT: Welcome to Derry -> moshow5.jpg -->
         <article class="card">
-          <img class="cover" alt="IT: Welcome to Derry"
-            src="moshow5.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="IT: Welcome to Derry"
+                 src="moshow5.jpg">
+          </figure>
           <div class="info">
             <div class="title">IT: Welcome to Derry</div>
             <div class="by">by HBO</div>
           </div>
         </article>
 
-        <!-- Chainsaw Man -->
+        <!-- Chainsaw Man -> moshow6.jpg -->
         <article class="card">
-          <img class="cover" alt="Chainsaw Man"
-            src="moshow6.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="Chainsaw Man"
+                 src="moshow6.jpg">
+          </figure>
           <div class="info">
             <div class="title">Chainsaw Man</div>
             <div class="by">by MAPPA</div>
           </div>
         </article>
 
-        <!-- Bugonia -->
+        <!-- Bugonia -> moshow7.jpg -->
         <article class="card">
-          <img class="cover" alt="Bugonia"
-            src="moshow7.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="Bugonia"
+                 src="mosho7.jpg">
+          </figure>
           <div class="info">
             <div class="title">Bugonia</div>
             <div class="by">by Focus Features</div>
           </div>
         </article>
 
-        <!-- Eight Legged Freaks -->
+        <!-- Eight Legged Freaks -> moshow8.jpg -->
         <article class="card">
-          <img class="cover" alt="Eight Legged Freaks"
-            src="mosho8.jpg">
+          <figure class="cover-frame">
+            <img class="cover" alt="Eight Legged Freaks"
+                 src="moshow8.jpg">
+          </figure>
           <div class="info">
             <div class="title">Eight Legged Freaks</div>
             <div class="by">by Warner Bros.</div>
