--- a/moviesshows.html
+++ b/moviesshows.html
@@ -211,7 +211,7 @@
         <article class="card">
           <figure class="cover-frame">
             <img class="cover" alt="Avatar: The Last Airbender"
-                 src="https://m.media-amazon.com/images/M/MV5BZTY4M2IzZjItZmM4ZC00NzE1LWE3Y2ItYzE5YTRiMWFhMTNhXkEyXkFqcGdeQXVyMTMzNDExODE5._V1_FMjpg_UX1000_.jpg">
+                 src="moshow4.JPG">
           </figure>
           <div class="info">
             <div class="title">Avatar: The Last Airbender</div>
