--- a/videogames.html
+++ b/videogames.html
@@ -121,15 +121,21 @@
       display:block;
     }
 
+    /* Uniform inner spacing for EVERY card */
     .panel{
       background:var(--panel);
       color:var(--text);
       padding:var(--space);
       text-align:left;
+
+      /* The key change: uniform vertical spacing without custom margins */
+      display:flex;
+      flex-direction:column;
+      gap:8px;
     }
-    .game-title{font-weight:800;font-size:16px;margin-bottom:8px;}
-    .by{font-weight:800;font-size:13px;opacity:.9;margin-bottom:8px;}
-    .desc{font-size:13px;color:#4a4a4a;line-height:1.45;margin:0;}
+    .game-title{font-weight:800;font-size:16px; margin:0;}
+    .by{font-weight:800;font-size:13px;opacity:.9; margin:0;}
+    .desc{font-size:13px;color:#4a4a4a;line-height:1.45; margin:0;}
 
     @media (max-width:768px){
       .title-wrap{gap:10px;margin:var(--space) 0;}
