--- a/moviesshows.html
+++ b/moviesshows.html
@@ -175,9 +175,8 @@
   </nav>
 
   <div class="container">
-    <h1>Movies &amp; Shows</h1>
+    <h1>🎬 Movies &amp; Shows 📺</h1>
     <p class="quote">"Television is the first truly democratic culture—the first culture available to everybody and entirely governed by what the people want."</p>
-    <div class="emoji">🎬</div>
 
     <section class="section">
       <h2 class="section-title">Favorite Shows &amp; Movies</h2>
