Add Nightmare on Elm Street movie card

--- a/moviesshows.html
+++ b/moviesshows.html
@@ -261,6 +261,17 @@
             <div class="by">by Warner Bros.</div>
           </div>
         </article>
+
+        <!-- Nightmare on Elm Street -->
+        <article class="card">
+          <figure class="cover-frame">
+            <img class="cover" alt="Nightmare on Elm Street" src="moshow9.JPG">
+          </figure>
+          <div class="info">
+            <div class="title">Nightmare on Elm Street</div>
+            <div class="by">by New Line Cinema</div>
+          </div>
+        </article>
       </div>
     </section>
   </div>
