--- a/certifications.html
+++ b/certifications.html
@@ -23,13 +23,11 @@
       background:var(--bg); color:var(--ink);
     }
 
-    /* Netflix-y caps for headers / brand */
     .nf{
       font-family:"Bebas Neue",system-ui,-apple-system,"Segoe UI","Helvetica Neue",Arial,sans-serif;
       letter-spacing:.015em; text-transform:uppercase;
     }
 
-    /* Navbar */
     .navbar{
       position:sticky; top:0; inset-inline:0; z-index:1000;
       width:100%; padding:14px clamp(16px,4vw,48px);
@@ -49,7 +47,6 @@
       text-decoration:underline; text-decoration-thickness:2px; text-underline-offset:4px;
     }
 
-    /* Header */
     .page-hero{
       padding:26px clamp(16px,4vw,48px) 10px;
       border-bottom:1px solid rgba(255,255,255,.06);
@@ -59,8 +56,7 @@
     }
     .page-hero h1{ font-size: clamp(28px,5.6vw,54px); line-height:1.05; }
 
-    /* Section styling - LEFT ALIGNED */
-    .section{ 
+    .section{
       padding: 22px clamp(16px,4vw,48px) 32px;
       max-width: 1400px;
     }
@@ -71,16 +67,15 @@
       font-weight: 700;
     }
 
-    /* Grid - LEFT ALIGNED, no centering */
     .grid{
-      display:grid; 
+      display:grid;
       grid-template-columns: repeat(auto-fit, minmax(320px, 400px));
-      gap:18px; 
+      gap:18px;
       margin-bottom: 48px;
       justify-content: start;
     }
-    @media (max-width: 640px){ 
-      .grid{ grid-template-columns: 1fr; } 
+    @media (max-width: 640px){
+      .grid{ grid-template-columns: 1fr; }
     }
 
     .card{
@@ -165,8 +160,8 @@
       <article class="card" aria-label="AI Application Development Certificate">
         <div class="card-head">
           <div class="icon gold">🤖</div>
-          <!-- Updated to attach CertificateAi.pdf -->
-          <a class="ext" href="CertificateAi.pdf" aria-label="Open certificate (PDF)" target="_blank" rel="noopener">
+          <!-- Link updated to point to PDF in GitHub repo -->
+          <a class="ext" href="https://raw.githubusercontent.com/YOUR-USERNAME/YOUR-REPOSITORY/MAIN/PATH/TO/CertificateAi.pdf" aria-label="Open certificate (PDF)" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
@@ -198,7 +193,7 @@
         <div class="issuer muted">Indian Institute of Technology, Bombay</div>
       </article>
 
-      <article class="card" aria-label="Programming with Everyone with Python">
+      <article class="card" aria-label="Programming for Everyone with Python">
         <div class="card-head">
           <div class="icon gold">🐍</div>
           <a class="ext" href="#" aria-label="Open certificate" target="_blank" rel="noopener">
