Update certificate details in certifications.html
Updated the certificate link and changed the title, issuer, and footnote for the AI Application Development Certificate.

--- a/certifications.html
+++ b/certifications.html
@@ -161,7 +161,7 @@
         <div class="card-head">
           <div class="icon gold">🤖</div>
           <!-- Link updated to point to PDF in GitHub repo -->
-          <a class="ext" href="https://raw.githubusercontent.com/YOUR-USERNAME/YOUR-REPOSITORY/MAIN/PATH/TO/CertificateAi.pdf" aria-label="Open certificate (PDF)" target="_blank" rel="noopener">
+          <a class="ext" href="CertificateAi.pdf" aria-label="Open certificate (PDF)" target="_blank" rel="noopener">
             <svg viewBox="0 0 24 24" fill="none" stroke-width="2">
               <path d="M14 3h7v7" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
               <path d="M21 3l-9 9" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"/>
@@ -169,9 +169,9 @@
             </svg>
           </a>
         </div>
-        <div class="title">Artificial Intelligence Application Development</div>
-        <div class="issuer">University of California, Santa Cruz Extension</div>
-        <div class="foot">Professional Certificate • 14 Units</div>
+        <div class="title">Ai Security & Governance</div>
+        <div class="issuer">Securiti</div>
+        <div class="foot">Core concepts in generative AI</div>
       </article>
     </div>
 
