--- a/moviesshows.html
+++ b/moviesshows.html
@@ -100,6 +100,7 @@
       display:grid;
       gap:var(--space);
       grid-template-columns:repeat(auto-fit,minmax(240px,1fr));
+      margin-bottom:var(--space);
     }
 
     /* Cards */
@@ -272,6 +273,18 @@
             <div class="by">by New Line Cinema</div>
           </div>
         </article>
+
+        <!-- Smiling Friends -->
+        <article class="card">
+          <figure class="cover-frame">
+            <img class="cover" alt="Smiling Friends" src="moshow10.JPG">
+          </figure>
+          <div class="info">
+            <div class="title">Smiling Friends</div>
+            <div class="by">by Adult Swim</div>
+          </div>
+        </article>
+
       </div>
     </section>
   </div>
